Upgrade examples to 0.5.0