@@ -4,16 +4,22 @@
 
   <groupId>net.codecrete.usb.examples</groupId>
   <artifactId>stm_dfu</artifactId>
-  <version>0.4.1</version>
+  <version>0.5.0</version>
 
   <name>stm_dfu</name>
   <url>https://github.com/manuelbl/JavaDoesUSB/examples/stm_dfu</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>net.codecrete.usb</groupId>
       <artifactId>java-does-usb</artifactId>
-      <version>0.4.1</version>
+      <version>0.5.0</version>
     </dependency>
   </dependencies>
 
@@ -31,10 +37,12 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>19</release>
-          <compilerArgs>--enable-preview</compilerArgs>
-          <source>19</source>
-          <target>19</target>
+          <release>20</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+          <source>20</source>
+          <target>20</target>
         </configuration>
       </plugin>
       <plugin>
@@ -44,6 +52,9 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <argLine>--enable-preview --enable-native-access=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
@@ -76,10 +87,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <properties>
-    <maven.compiler.target>19</maven.compiler.target>
-    <maven.compiler.source>19</maven.compiler.source>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 </project>
